--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,9 @@ html {
 }
 
 body {
-	background: $white;
-  font: 18px/1.4 $helvetica;
-  color: $darkGray;
+    background-color: rgb(25,25,25);
+  font: 18px/1.4 'Ubuntu Mono';
+  color: rgb(230,230,230);
 }
 
 .container {
@@ -31,7 +31,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
+  font-family: 'Ubuntu Mono', ;
   color: $darkerGray;
   font-weight: bold;
 
@@ -46,6 +46,8 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 30px;
+  color: rgb(190,42,200);
+  font-weight: 400;
   a {
     color: inherit;
   }
@@ -192,10 +194,9 @@ img {
 
 .site-name {
   margin: 0;
-  color: $darkGray;
+  color: rgb(15,245,245);
+  font-weight: 400;
   cursor: pointer;
-  font-family: $helveticaNeue;
-  font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
 }
@@ -213,7 +214,6 @@ img {
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
   font-size: 18px;
 
   @include mobile {
@@ -225,7 +225,6 @@ nav {
 
   a {
     margin-left: 20px;
-    color: $darkGray;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
@@ -274,8 +273,6 @@ nav {
 .wrapper-footer {
   margin-top: 50px;
   border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
 }
 
 footer {
